fixed overflow issue

--- a/src/styles/core.scss
+++ b/src/styles/core.scss
@@ -1,3 +1,12 @@
 @import "~breakpoint-sass/stylesheets/breakpoint";
 @import "./vars/index";
 @import "./base/index";
+
+/*
+* {
+  outline: 1px solid red;
+  opacity: 1 !important;
+  visibility: visible !important;
+}
+
+*/
